[gd_scene load_steps=9 format=2]

[ext_resource path="res://GUI/Themes/MenuTheme.tres" type="Theme" id=1]
[ext_resource path="res://Font/Hack/HackHeader.tres" type="DynamicFont" id=2]
[ext_resource path="res://GUI/Options/Options.gd" type="Script" id=3]
[ext_resource path="res://Font/Hack/HackSmallHeader.tres" type="DynamicFont" id=4]
[ext_resource path="res://GUI/Options/Video/DisplaySettings.tscn" type="PackedScene" id=5]
[ext_resource path="res://GUI/Options/Audio/VolumeSetting.tscn" type="PackedScene" id=6]
[ext_resource path="res://GUI/Integration/IntegrationMenu.tscn" type="PackedScene" id=7]
[ext_resource path="res://GUI/Options/General/IntegrationSettings.tscn" type="PackedScene" id=8]

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="CenterContainer"]
margin_left = 415.0
margin_top = 160.0
margin_right = 865.0
margin_bottom = 560.0
rect_min_size = Vector2( 450, 400 )
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReferenceRect" type="ReferenceRect" parent="CenterContainer/Panel/VBoxContainer"]
margin_right = 450.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )

[node name="Label" type="Label" parent="CenterContainer/Panel/VBoxContainer"]
margin_top = 24.0
margin_right = 450.0
margin_bottom = 57.0
custom_fonts/font = ExtResource( 2 )
text = "Options"
align = 1

[node name="ReferenceRect3" type="ReferenceRect" parent="CenterContainer/Panel/VBoxContainer"]
margin_top = 61.0
margin_right = 450.0
margin_bottom = 71.0
rect_min_size = Vector2( 0, 10 )

[node name="TabContainer" type="TabContainer" parent="CenterContainer/Panel/VBoxContainer"]
margin_top = 75.0
margin_right = 450.0
margin_bottom = 340.0
size_flags_horizontal = 3
size_flags_vertical = 3
tab_align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="General" type="Control" parent="CenterContainer/Panel/VBoxContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 23.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel/VBoxContainer/TabContainer/General"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 10.0
margin_right = -20.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CenterContainer/Panel/VBoxContainer/TabContainer/General/VBoxContainer"]
margin_right = 410.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 4 )
text = "Third-Party Integration"
align = 1

[node name="ReferenceRect" type="ReferenceRect" parent="CenterContainer/Panel/VBoxContainer/TabContainer/General/VBoxContainer"]
margin_top = 28.0
margin_right = 410.0
margin_bottom = 33.0
rect_min_size = Vector2( 0, 5 )

[node name="IntegrationSettings" parent="CenterContainer/Panel/VBoxContainer/TabContainer/General/VBoxContainer" instance=ExtResource( 8 )]

[node name="Video" type="Control" parent="CenterContainer/Panel/VBoxContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 23.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel/VBoxContainer/TabContainer/Video"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 10.0
margin_right = -20.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CenterContainer/Panel/VBoxContainer/TabContainer/Video/VBoxContainer"]
margin_right = 410.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 4 )
text = "Display"
align = 1

[node name="ReferenceRect" type="ReferenceRect" parent="CenterContainer/Panel/VBoxContainer/TabContainer/Video/VBoxContainer"]
margin_top = 28.0
margin_right = 410.0
margin_bottom = 33.0
rect_min_size = Vector2( 0, 5 )

[node name="DisplaySettings" parent="CenterContainer/Panel/VBoxContainer/TabContainer/Video/VBoxContainer" instance=ExtResource( 5 )]

[node name="Sound" type="Control" parent="CenterContainer/Panel/VBoxContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 23.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel/VBoxContainer/TabContainer/Sound"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 10.0
margin_right = -20.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CenterContainer/Panel/VBoxContainer/TabContainer/Sound/VBoxContainer"]
margin_right = 410.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 4 )
text = "Volume"
align = 1

[node name="ReferenceRect" type="ReferenceRect" parent="CenterContainer/Panel/VBoxContainer/TabContainer/Sound/VBoxContainer"]
margin_top = 28.0
margin_right = 410.0
margin_bottom = 33.0
rect_min_size = Vector2( 0, 5 )

[node name="VolumeSettings" type="Control" parent="CenterContainer/Panel/VBoxContainer/TabContainer/Sound/VBoxContainer"]
margin_top = 37.0
margin_right = 410.0
margin_bottom = 137.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel/VBoxContainer/TabContainer/Sound/VBoxContainer/VolumeSettings"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VolumeSetting" parent="CenterContainer/Panel/VBoxContainer/TabContainer/Sound/VBoxContainer/VolumeSettings/VBoxContainer" instance=ExtResource( 6 )]

[node name="VolumeSetting2" parent="CenterContainer/Panel/VBoxContainer/TabContainer/Sound/VBoxContainer/VolumeSettings/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 34.0
margin_bottom = 64.0
title = "Music"
bus_name = "Music"

[node name="VolumeSetting3" parent="CenterContainer/Panel/VBoxContainer/TabContainer/Sound/VBoxContainer/VolumeSettings/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 68.0
margin_bottom = 98.0
title = "Effects"
bus_name = "Effects"

[node name="VolumeSetting4" parent="CenterContainer/Panel/VBoxContainer/TabContainer/Sound/VBoxContainer/VolumeSettings/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 102.0
margin_bottom = 132.0
title = "UI"
bus_name = "UI"

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/Panel/VBoxContainer"]
margin_top = 344.0
margin_right = 450.0
margin_bottom = 376.0
rect_min_size = Vector2( 0, 32 )

[node name="ReferenceRect" type="ReferenceRect" parent="CenterContainer/Panel/VBoxContainer/HBoxContainer"]
margin_right = 173.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BackButton" type="Button" parent="CenterContainer/Panel/VBoxContainer/HBoxContainer"]
margin_left = 177.0
margin_right = 273.0
margin_bottom = 32.0
rect_min_size = Vector2( 96, 0 )
text = "Back"

[node name="ReferenceRect2" type="ReferenceRect" parent="CenterContainer/Panel/VBoxContainer/HBoxContainer"]
margin_left = 277.0
margin_right = 450.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ReferenceRect2" type="ReferenceRect" parent="CenterContainer/Panel/VBoxContainer"]
margin_top = 380.0
margin_right = 450.0
margin_bottom = 400.0
rect_min_size = Vector2( 0, 20 )

[node name="IntegrationMenu" parent="." instance=ExtResource( 7 )]
visible = false
[connection signal="activated" from="CenterContainer/Panel/VBoxContainer/TabContainer/General/VBoxContainer/IntegrationSettings" to="." method="_on_IntegrationSettings_activated"]
[connection signal="pressed" from="CenterContainer/Panel/VBoxContainer/HBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="back" from="IntegrationMenu" to="." method="_on_IntegrationMenu_back"]
